# kasho

./: .dockerignore  .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  LICENSE  README.md  TESTING.md  Taskfile.yml  eslint.config.mjs  go.work  go.work.sum  package-lock.json  package.json
.beads/: issues.jsonl
.github/workflows/: README.md  deploy-demo.yml  publish-containers.yml  test-go-services.yml  test-nextjs-app.yml  test.yml
apps/console/: README.md  jest.setup.ts  (+6 more)
demo/: docker-compose.yml
design/: kasho-icon-dark.pxd  kasho-icon-light.pxd  kasho-icon.pxd  kasho-wordmark-light.pxd  kasho-wordmark.pxd
docs/: bootstrap-and-stream.md  bootstrap-sync.md  deployment.md  github-org-migrate.md  testing.md  transforms.md
eng-docs/: bootstrap-and-stream.md  bootstrap-sync.md  console-auth-implementation-plan.md  github-org-migrate.md  licensing.md  org-admin-code-review.md  simplify-env.md  workos-auth.md
proto/: change_stream.proto  license.proto
python-consumer/: .env.demo  Pipfile  translicate_consumer.py
scripts/: bootstrap-kasho.sh  compare-dbs.sh  demo-fake-projmgmt-saas.sh  env-template-wrapper.sh  kasho-help.sh  migrate-to-dockerhub.sh  parse-db-url.sh  prepare-dbs.sh  setup-replication.sh  vercel-build-check.sh
services/replicate-poc/: Dockerfile  pyproject.toml  translicate_consumer.py
sql/: 10-setup-ddl-replication-log.sql  setup_replication_primary.sql  setup_replication_replica.sql  setup_wal_primary.sql
src/: .env.demo  go.mod  go.sum  main.go  server.go  transformconfig.go  walclient.go  walparser.go
(+337 files in other folders)
